# oncotrialLLM

./: .gitignore  Makefile  README.md  pyproject.toml
llm/: README.md
llm/conf/: config.yaml
llm/data/interim/: random_trials_annotated.json
llm/data/processed/: ft_test.jsonl  ft_train.jsonl  ft_validation.jsonl
llm/data/processed/simulated/: ft_train.jsonl  negative_training.jsonl
llm/data/raw/: biomarkers_list.json  random_trials.json
llm/data/results/: Fine_tune_a_Mistral_7b_model_with_DPO_zero-shot_zero-shot_loong_r_2_alpha_4.json  Fine_tune_a_Mistral_7b_model_with_DPO_zero-shot_zero-shot_loong_r_2_alpha_4_sythetic_new.json  Mistral_7b_model_zero-shot_long.json  eval_gpt-3.5-turbo_1shot.json  eval_gpt-3.5-turbo_2shot.json  eval_gpt-4_2CoP.json  gpt-3.5-turbo_0shot.json  gpt-3.5-turbo_2CoP.json  gpt-4_0shot.json
llm/data/simulated/: ft_validation.jsonl  gpt4_simulated_data.json  negative_validation.jsonl
llm/modules/: biomarker_handler.py  chromadb_handler.py  gpt_handler.py  logging_handler.py
llm/prompts/: chain_1.json  chain_2.json  one-shot.json  two-shot.json  zero-shot.json
llm/scripts/: aacr_analysis.py  dpo_train.py  evaluate_gpt_chain_of_prompts.py  evaluate_gpt_fewshots.py  evaluate_hermes_models.py  generate_jsonL.py  generate_negatives.py  plot_cancer_patient_distribution.py  plot_f2_scores.py  plot_token_distribution.py  process_civic.py  random_trial_selection.py  simulate_trials_gpt4.py
llm/utils/: evaluation.py  jsons.py
